src/objects/FMO_Organisations__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.FMO_Organisation__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FMO Organisations</relationshipLabel>
        <relationshipName>FMO_Organisations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FMO_Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FMO Organisation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>FMO Organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Organisations</relationshipLabel>
        <relationshipName>FMO_Organisations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FMO Organisations</relationshipLabel>
        <relationshipName>FMO_Organisations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FMO Organisation</label>
    <nameField>
        <displayFormat>FMO-{0000}</displayFormat>
        <label>FMO Organisation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FMO Organisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>